Changed to tikz-uml 1.0 (2016/03/26).

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10292,27 +10292,27 @@ Here all member ends are owned by class/data types.
 \umlemptyclass{Net}
 \umlemptyclass[x=-2, y=-3]{Station}
 \umlclass[x=2.5, y=-3]{Line}{linear : Boolean}{}
-%% \umlcompo[name=NetStation,mult2=2..*, pos2=2.7, geometry=|-|]{Net}{Station}
-%% \draw (NetStation-4) node[above] {N2S};
-%% \umlcompo[name=NetLine,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Net}{Line}
-%% \draw (NetLine-4) node[above] {N2L};
-%% \umlemptyclass[x=-4, y=-6]{Unit}
-%% \umlclass[x=0, y=-6]{Track}{linear : Boolean}{}
-%% \umlcompo[name=StationUnit,mult2=*, pos2=2.7, geometry=|-|]{Station}{Unit}
-%% \draw (StationUnit-4) node[above] {S2U};
-%% \umlcompo[name=StationTrack,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Station}{Track}
-%% \draw (StationTrack-4) node[above] {S2T};
-%% \umlemptyclass[x=-8, y=-6]{Connector}
-%% \umlassoc[name=ConnectorUnit, mult1=1..4, pos1=0, align1=left, mult2=1, pos2=1, align2=right]{Connector}{Unit}
-%% \draw (ConnectorUnit-middle) node[above] {c2u};
-%% \umlemptyclass[x=-6, y=-9]{Point}
-%% \umlemptyclass[x=-2, y=-9]{Linear}
-%% \umlinherit[geometry=|-|]{Point}{Unit}
-%% \umlinherit[geometry=|-|]{Linear}{Unit}
-%% \umlassoc[name=LinearTrack, mult1=1..*, pos1=0, align1=left, anchor1=20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Track}
-%% \draw (LinearTrack-2) node[right] {L2T};
-%% \umlassoc[name=LinearLine, mult1=1..*, pos1=0, align1=left, anchor1=-20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Line}
-%% \draw (LinearLine-2) node[right] {L2L};
+\umlcompo[name=NetStation,mult2=2..*, pos2=2.7, geometry=|-|]{Net}{Station}
+\draw (NetStation-4) node[above] {N2S};
+\umlcompo[name=NetLine,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Net}{Line}
+\draw (NetLine-4) node[above] {N2L};
+\umlemptyclass[x=-4, y=-6]{Unit}
+\umlclass[x=0, y=-6]{Track}{linear : Boolean}{}
+\umlcompo[name=StationUnit,mult2=*, pos2=2.7, geometry=|-|]{Station}{Unit}
+\draw (StationUnit-4) node[above] {S2U};
+\umlcompo[name=StationTrack,mult1=1, pos1=0.3, mult2=*, pos2=2.7, geometry=|-|]{Station}{Track}
+\draw (StationTrack-4) node[above] {S2T};
+\umlemptyclass[x=-8, y=-6]{Connector}
+\umlassoc[name=ConnectorUnit, mult1=1..4, pos1=0, align1=left, mult2=1, pos2=1, align2=right]{Connector}{Unit}
+\draw (ConnectorUnit-middle) node[above] {c2u};
+\umlemptyclass[x=-6, y=-9]{Point}
+\umlemptyclass[x=-2, y=-9]{Linear}
+\umlinherit[geometry=|-|]{Point}{Unit}
+\umlinherit[geometry=|-|]{Linear}{Unit}
+\umlassoc[name=LinearTrack, mult1=1..*, pos1=0, align1=left, anchor1=20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Track}
+\draw (LinearTrack-2) node[right] {L2T};
+\umlassoc[name=LinearLine, mult1=1..*, pos1=0, align1=left, anchor1=-20, mult2=1, pos2=2, align2=left, geometry=-|]{Linear}{Line}
+\draw (LinearLine-2) node[right] {L2L};
 \end{tikzpicture}
 \end{center}
 \caption{Sample UML class model}
