--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -72,7 +72,7 @@
 %\renewcommand{\headrulewidth}{\iffloatpage{0pt}{0.4pt}}
 
 
-
+\usepackage{multicol}
 
 
 %%\usepackage[show]{ed}
@@ -1552,7 +1552,7 @@ plus non-logical annotations\index{annotation}.}
 	
  
 \termdefinition{ontology}{\termref{logical theory} that is used as a
-  shard conceptualization}
+  shared conceptualization}
     
 \termdefinition{MDE model}{logical theory that is used as an
 abstract representation of a domain or of a system, in
@@ -2739,7 +2739,7 @@ to support query languages (e.g., SQL or SPARQL) in \DOL{} and to enable query r
 for OMS in other DOL conformant languages (\emph{informative}). 
 
 \medskip \noindent 
-Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
+Annex \ref{a:uses} provides textual examples for all \DOL constructs, which 
 are specified in the abstract syntax 
 (\emph{informative}).
 %Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied  (\emph{informative}). For  each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.
@@ -3189,7 +3189,7 @@ and thus enable formal verification of the translation from Dublin Core to PROV.
 
 \sclause{Use Case Onto-6: Maintaining Different Versions of an Ontology 
 in Languages with Different Expressivity}
-Often is useful to maintain different versions of an ontology within languages, which differ in 
+Often it is useful to maintain different versions of an ontology within languages, which differ in 
  their expressivity. 
  
  
@@ -3527,7 +3527,7 @@ $$\xymatrix{
 \label{model-1}
 
 A typical UML model involves models of different types. Such UML models may have intrinsic errors because models of different types may specify conflicting 
-requirements. Typical questions that arise in this context are ask for
+requirements. Typical questions that arise in this context ask for
 semantic consistency, e.g.,
 
 \begin{itemize}
@@ -5546,6 +5546,9 @@ The lexical symbols of the \DOL text serialization include various key words and
 
 Key words are always written lowercase. The following key words are reserved, and are not available for use as variables or as CURIEs with no prefix\footnote{In such a case, one can still rename affected variables, or declare a prefix binding for affected CURIEs, or use absolute IRIs instead.  These rewritings do not change the semantics.}, although they can be used as parts of tokens. 
 %{\ttfamily %
+\begin{multicols}{3}
+	
+
 \begin{lstlisting}
 alignment 
 along 
@@ -5618,7 +5621,7 @@ with
 %wdef
 \end{lstlisting}
 %}
-
+\end{multicols}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -5626,10 +5629,12 @@ with
 
 Table~\ref{tab:key-signs} following key signs are reserved, and are not available for use as complete identifiers.  Key signs that are outside of the Basic Latin subset of Unicode may alternatively be encoded as a sequence of Basic Latin characters.
 
+
 \newcolumntype{T}{>{\ttfamily}{l}}
 \ctable[
   caption={Key Signs},
   label={tab:key-signs},
+  pos=h
 ]{TTT}{
 }{\FL
   \rmfamily Sign & \rmfamily Unicode Code Point & \rmfamily Basic Latin substitute \ML
@@ -10762,7 +10767,7 @@ The TPTP text syntax is text conformant with \DOL.
 
 \sclause{Semantic Conformance of TPTP With \DOL}
 
-In \cite{GoguenBurstall92}, many-sorted first has been formalized as
+In \cite{GoguenBurstall92}, many-sorted first-order logic has been formalized as
 an institution; the single-sorted sublogic (using only a fixed set of
 sorts $\{s\}$ is isomorphic to unsorted first-order logic).
 
