close issue #299 all occurences of %implies replaced by %implied

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5665,7 +5665,7 @@ The following cases apply for injecting identifiers into fragments of OMS langua
 If the serialization conforms with XML as per requirement~\ref{it:standoff-xpointer}, one of \nref{text/plain-URI} or XPointer (\nref{XPointer}) shall be used. { (As an example, consider the identification of imports in the OWL/XML serialization~\cite{W3C:REC-owl2-xml-serialization-20121211}, which does not provide a native way for assigning identifiers to imports unless modified as suggested in annex~\ref{sec:conformance-owl-xml-rdf}.  For example, in an OMS file \textit{cars.owx}, the import \texttt{<Import>http://example.org/engines</Import>} can be referred to by the IRI \url{cars.owx\#xpointer(/owl:Ontology/owl:Import[text()='http://example.org/engines'])} assuming the right binding for the namespace prefix \textit{owl} in scope.
 The same import in the text-based OWL Manchester syntax~\cite{W3C:NOTE-owl2-manchester-syntax-20091027} could be referred to as \url{cars.omn\#line=27} according to \nref{text/plain-URI} if it is on line 27 of the document.)}
 \end{description}
-\ednote{TODO: injection of identifiers addressed, but we also had \%implies etc.  The latter will probably be handled in a similar way, but I don't know how \emph{exactly}.}
+\ednote{TODO: injection of identifiers addressed, but we also had \%implied etc.  The latter will probably be handled in a similar way, but I don't know how \emph{exactly}.}
 
 Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a document may employ RDF annotations that use XPointer or \nref{text/plain-URI} as means of non-destructively referencing pieces of XML or text by IRI, as specified above. (The extensibility of the XPointer framework may be utilized by developing additional XPointer schemes, \eg for pointing to subterms of sentences in the XCL serialization of Common Logic.) 
 
@@ -12732,7 +12732,7 @@ then
     vars a, b, c:Elem
     . (a + c) <= (b + c) if a <= b              %(FWO_plus_left)%
     . (a * c) <= (b * c) if a <= b /\ 0 <= c;   %(FWO_times_left)%
-then %implies
+then %implied
     vars a, b, c, d: Elem
     . (a + b) <= (a + c) if b <= c              %(FWO_plus_right)%
     . (a * b) <= (a * c) if b <= c /\ 0 <= a    %(FWO_times_right)%
