--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5825,7 +5825,8 @@ $\sigma:{\Sigma}\to{\Sigma'}$, the \emph{sentence translation map}
 $\sen(\sigma):{\sen(\Sigma)}\to{\sen(\Sigma')}$, where often
 $\sen(\sigma)(\varphi)$ is written as $\sigma(\varphi)$, \item a
 functor $\IMod:{\Sig^{op}}\to{\Cat}$ giving, for each signature
-$\Sigma$, the category of \emph{models} $\IMod(\Sigma)$, and for each
+$\Sigma$, the category of \emph{realisations}\footnote{To avoid confusion 
+with MDE models, we use `realisation` instead of  the commonly used term `model` in logic.} $\IMod(\Sigma)$, and for each
 signature morphism $\sigma\map{\Sigma}{\Sigma'}$, the \emph{reduct
 functor\/} $\IMod(\sigma):{\IMod(\Sigma')}\to {\IMod(\Sigma)}$, where
 often $\IMod(\sigma)(M')$ is written as $M'\forget{\sigma}$, and
@@ -5853,9 +5854,9 @@ context.  \qed
 \begin{definition}[Propositional Logic]\label{Prop}
 The signatures of propositional logic are sets $\Sigma$ of propositional symbols, and signature morphisms are just
 functions $\sigma:{\Sigma_1}\to{\Sigma_2}$ between these sets. 
-A $\Sigma$-model is a function $M : {\Sigma}\to{\{True, False\}}$, and the reduct of a 
-$\Sigma_2$-model $M_2$ along a signature morphism $\sigma:{\Sigma_1}\to{\Sigma_2}$ is 
-the $\Sigma_1$-model given by the composition of $\sigma$ with $M_2$. $\Sigma$-sentences are built from the
+A $\Sigma$-realisation is a function $M : {\Sigma}\to{\{True, False\}}$, and the reduct of a 
+$\Sigma_2$-realisation $M_2$ along a signature morphism $\sigma:{\Sigma_1}\to{\Sigma_2}$ is 
+the $\Sigma_1$-realisation given by the composition of $\sigma$ with $M_2$. $\Sigma$-sentences are built from the
 propositional symbols with the usual connectives, and sentence translation is replacing the propositional
 symbols in $\Sigma$ along the morphism. Finally, the satisfaction relation is defined by the standard truth-tables
 semantics. It is straightforward to see that the satisfaction condition holds.\quad\qed
@@ -5866,7 +5867,7 @@ A common logic signature
 $\Sigma$ (called vocabulary in Common Logic terminology) consists of a
 set of names, with a subset called the set of discourse names, and a
 set of sequence markers.
-A $\Sigma$-model consists of a set $\UR$,
+A $\Sigma$-realisation consists of a set $\UR$,
 the universe of reference, with a non-empty subset $\UD\subseteq \UR$,
 the universe of discourse, and four mappings:
   \begin{itemize}
@@ -5899,14 +5900,14 @@ A \Clogic signature morphism
 consists of two maps between the sets of names and of sequence markers, such that the property of 
 being a discourse name is preserved and reflected.\footnote{That  is, a name is a discourse
 name if and only if its image under the signature morphism is.}
-  Model reducts leave $\UR$, $\UD$, 
+  Reducts leave $\UR$, $\UD$, 
 $\rel$ and $\fun$ untouched, while $\intCL$ and $\seq$ are composed with the appropriate
 signature morphism component.\quad\qed
 \end{definition}
 %
 
 Further examples of institutions are: $\mathcal{SROIQ}(D)$, unsorted first-order logic, 
-many-sorted first-order logic, and many others.  Note that the reduct of a model 
+many-sorted first-order logic, and many others.  Note that the reduct of a realisation 
 is generally given by forgetting some of its parts.
 
 For the rest of the section, an arbitrary institution is considered. 
@@ -5915,12 +5916,15 @@ For the rest of the section, an arbitrary institution is considered.
 A \defsty{theory} is a pair $(\Sigma,\Delta)$ where $\Sigma$ is a signature and $\Delta$ is a set of $\Sigma$-sentences.
 \end{definition}
 
-Given a theory $T=(\Sigma, \Delta)$, the class of $T$-models is the class of all
-$\Sigma$-models $M$ such that $M\models \delta$, for each sentence $\delta \in \Delta$.
+Given a theory $T=(\Sigma, \Delta)$, the class of $T$-realisation 
+is the class of all
+$\Sigma$-realisations $M$ such that $M\models \delta$, 
+for each sentence $\delta \in \Delta$.
 A theory $(\Sigma, \Delta)$ is \defsty{consistent\/} if at least one 
- $\Sigma$-model exists. \defsty{Semantic entailment} is defined as usual: 
-for  a theory $\Delta\subseteq \sen(\Sigma)$ and 
-$\varphi\in \sen(\Sigma)$, $\Delta$ entails $\varphi$, written $\Delta\models\varphi$, if all models satisfying all sentences in
+ $(\Sigma, \Delta)$-realisation exists. 
+ \defsty{Semantic entailment} is defined as usual: 
+for  a theory $(\Sigma, \Delta)$ and 
+$\varphi\in \sen(\Sigma)$, $\Delta$ entails $\varphi$, written $\Delta\models\varphi$, if all realisations satisfying all sentences in
 $\Delta$ also satisfy $\varphi$. For a theory $(\Sigma, \Delta)$, we write $\Delta^\bullet$ for the set of all $\Sigma$-sentences $\varphi$ such that $\Delta \models \varphi$. 
 
 \begin{definition}[Theory morphism]
@@ -5934,7 +5938,7 @@ Institution comorphisms capture the intuition of encoding or embedding a logic i
 \begin{definition}[Institution Comorphism] An \defsty{institution comorphism} from an institution $I = (\Sig^I,$ $ \Mod^I, \Sen^I, \models^I)$ to an institution $J=(\Sig^J, \Mod^J,\Sen^J, \models^J)$ consists of a functor $\Phi : \Sig^I \longrightarrow \Sig^J$, and
 two natural transformations $\beta: \Mod^J \circ \Phi^{op} \Longrightarrow \Mod^I$
 and $\alpha: \Sen^I \Longrightarrow \Sen^J \circ \Phi$, such that 
-for each $I$-signature $\Sigma$, each sentence $\varphi\in\Sen^I(\Sigma)$ and each model $M'\in|\Mod^J(\Phi(\Sigma))|$
+for each $I$-signature $\Sigma$, each sentence $\varphi\in\Sen^I(\Sigma)$ and each realisation $M'\in|\Mod^J(\Phi(\Sigma))|$
 %
 \begin{equation*}
   M'\models^{J}_{\Phi(\Sigma)}\alpha_{\Sigma}(\varphi)
@@ -5950,8 +5954,8 @@ Here, $\Phi(\Sigma)$ is the translation of the signature $\Sigma$ from
 institution $I$ to institution $J$, $\alpha_{\Sigma}(\varphi)$ is the
 translation of the $\Sigma$-sentence $\varphi$ to a
 $\Phi(\Sigma)$-sentence, and $\beta_{\Sigma}(M')$ is the translation
-(or perhaps better: reduction) of the $\Phi(\Sigma)$-model $M'$ to a
-$\Sigma$-model. Naturality of $\alpha$ and $\beta$ means that for each
+(or perhaps better: reduction) of the $\Phi(\Sigma)$-realisation $M'$ to a
+$\Sigma$-realisation. Naturality of $\alpha$ and $\beta$ means that for each
 signature morphism $\sigma:\Sigma_1\rightarrow\Sigma_2$ in $I$ the following 
 squares commute:
 %
@@ -5991,7 +5995,7 @@ the naturality diagram
 \end{equation*}
 %
 admits (weak) amalgamation, i.e.\
-any for any two models $M_2\in|\Mod^I(\Sigma_2)|$
+any for any two realisations $M_2\in|\Mod^I(\Sigma_2)|$
 and $M'_1\in|\Mod^J(\Phi(\Sigma_1))|$
 with $M_2\forget{\sigma}=\beta_{\Sigma_1}(M'_1)$,
 there is a unique (not necessarily unique) 
@@ -6001,7 +6005,7 @@ and $M'_2\forget{\Phi(\sigma)}=M'_1$;
 
  \item a \emph{subinstitution comorphism} if $\Phi$ is
 an embedding, each $\alpha_\Sigma$ is injective and each $\beta_\Sigma$
-is bijective\footnote{An isomorphism if model morphisms are taken into
+is bijective\footnote{An isomorphism if morphisms of realisations are taken into
 account.};
 
 \item an \emph{inclusion comorphism} if 
@@ -6026,8 +6030,8 @@ as OMS translation and OMS reduction.
    institution of its theories, denoted $I^{th}$, can be defined as follows. The category of signatures of $I^{th}$ is the category
    of $I$-theories and $I$-theory morphisms, denoted $\Th^I$.
    For each theory $(\Sigma, \Delta)$, its sentences are just $\Sigma$-sentences in $I$, and
-   its models are just $\Sigma$-models in $I$ that satisfy the sentences in $\Delta$, while the
-   $(\Sigma,\Delta)$-satisfaction is the $\Sigma$-satisfaction of sentences in models of $I$.
+   its realisations are just $\Sigma$-realisations in $I$ that satisfy the sentences in $\Delta$, while the
+   $(\Sigma,\Delta)$-satisfaction is the $\Sigma$-satisfaction of sentences in realisations of $I$.
 \qed \end{definition}
 
 Using this notion, logic translations can be defined that include axiomatization of parts of the
@@ -6049,7 +6053,7 @@ An \defsty{institution morphism} from an institution $I = (\Sig^I,$ $ \Mod^I, \S
 an institution $J = (\Sig^J, \Mod^J,
 \Sen^J, \models^J)$ consists of a functor $\Phi : \Sig^I \longrightarrow \Sig^J$, and two
 natural transformations $\beta: \Mod^I \Longrightarrow \Mod^J \circ \Phi^{op}$
-and $\alpha:  \Sen^J \circ \Phi \Longrightarrow \Sen^I $, such that for each $I$-signature $\Sigma$, each sentence $\varphi\in\Sen^J(\Phi(\Sigma))$ and each model $M\in\Mod^I(\Sigma)$
+and $\alpha:  \Sen^J \circ \Phi \Longrightarrow \Sen^I $, such that for each $I$-signature $\Sigma$, each sentence $\varphi\in\Sen^J(\Phi(\Sigma))$ and each realisation $M\in\Mod^I(\Sigma)$
 %
 \begin{equation*}
   M\models^{I}_{\Sigma}\alpha_{\Sigma}(\varphi)
@@ -6068,9 +6072,9 @@ see \ref{sec:colimits}.
 
 
 A major property of colimits of specifications is \emph{amalgamation} (also related to `exactness' \cite{DGS91}). It can be intuitively explained as 
-stating that models of given
-specifications can be combined to yield a uniquely determined model of
-a colimit specification, provided that the original models coincide on
+stating that realisations of given
+specifications can be combined to yield a uniquely determined realisation of
+a colimit specification, provided that the original realisations coincide on
 common components. Amalgamation is a common technical assumption in the 
 study of specification semantics
 \cite{STbook}.
@@ -6080,19 +6084,20 @@ $I=(\Sig,\Sen,\Mod,\models)$.
 
 \begin{definition}
 Given a network $D\map{J}{\Sig^I}$, 
-a family of models $\mathcal{M} = \{M_p\}_{j\in |J|}$ is
+a family of realisations $\mathcal{M} = \{M_p\}_{j\in |J|}$ is
 \emph{consistent with} $D$ (or sometimes compatible with $D$) 
 if for each node $p$ of $D$, $M_p \in Mod(D(p))$ and
 for each edge $e:p\rightarrow q$, $M_p = M_q\forget{D(e)}$.
   A cocone
 $(\Sigma,(\mu_j)_{j\in|J|})$ over the network $D\map{J}{\Sig^I}$ is
 called \emph{weakly amalgamable} if it is mapped to a weak limit by $\Mod$.
-For models, this means that for each $D$-compatible family of
-models $(M_j)_{j\in|J|}$, there is a $\Sigma$-model $M$, called an amalgamation of 
+For realisations, this means that for each $D$-compatible family of
+realisations $(M_j)_{j\in|J|}$, there is a $\Sigma$-realisation $M$, called an amalgamation of 
  $(M_j)_{j\in|J|}$,
 with
-$M\forget{\mu_j}=M_j$ ($j\in|J|$), and similarly for model morphisms.
- If this model is unique, the cocone
+$M\forget{\mu_j}=M_j$ ($j\in|J|$), and similarly for morphisms of
+realisations.
+ If this realisation is unique, the cocone
 is called \emph{amalgamable}. 
 $I$ (or $\Mod$) admits \emph{(finite) (weak)
 amalgamation} if (finite) colimit cocones are (weakly) amalgamable.
@@ -6104,11 +6109,11 @@ it has pushouts and admits (weak) amalgamation for these.
 in a heterogeneous setting, where the network consists of signatures (or theories)
 in different logics. Since a network may admit more than one weakly amalgamable cocone,
 a selection operation is required both for the weakly amalgamable cocone of a network 
-and for the (potentially non-unique) amalgamation of a family of models compatible with the
+and for the (potentially non-unique) amalgamation of a family of realisations compatible with the
 network. This allows us to define a function
 $colimit$ taking as argument a network of heterogeneous signatures and
 returning the selected weakly amalgamable cocone for the network and
-a function $\oplus$ taking as argument a family of models compatible with a network
+a function $\oplus$ taking as argument a family of realisations compatible with a network
 and returning its selected amalgamation.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6170,7 +6175,7 @@ An institution is \emph{weakly inclusive} if
 \begin{itemize}
   \item $\Sig$ is inclusive and has pushouts which preserve inclusions,
   \item $\Sen$ is inclusive, and
-  \item each model category has a broad subcategory of inclusions.\quad\qed
+  \item each category of realisations has a broad subcategory of inclusions.\quad\qed
 \end{itemize}
 \end{definition}
 
@@ -6186,7 +6191,7 @@ exists and is equal to $\Sigma_1\setminus \Sigma_2$.
 We will write $\iota_{A\subseteq B}$ for the inclusion of $A$ in $B$ in an
 inclusive category, when such an inclusion exists. If $\cI$ is an inclusive institution
 and $\Sigma\subseteq\Sigma'$ is an inclusion of signatures, we write 
-$M'\forget{\Sigma}$ for the reduct of a $\Sigma'$-model $M'$ along the inclusion
+$M'\forget{\Sigma}$ for the reduct of a $\Sigma'$-realisation $M'$ along the inclusion
 $\iota_{\Sigma\subseteq\Sigma'}$.
 
 To be able to talk about the symbols of a signature in a formal way, it
@@ -6206,7 +6211,8 @@ it uniquely determines a map $|\sigma|:|\Sigma|\to|\Sigma'|$.
 After these preliminaries, we can now list the assumptions made about the
 institutions in a heterogeneous logical environment.
 It is required that for each institution in the heterogeneous logical environment there is a trivial signature
-$\emptyset$ with model class $\cM_\emptyset$ and such that there exists a unique signature morphism
+$\emptyset$ with class of realisations $\cM_\emptyset$ and 
+such that there exists a unique signature morphism
 from $\emptyset$ to any signature of the institution. Moreover, the existence of a partial union operation on institutions is required, denoted $\bigcup$: 
 $L_1 \bigcup L_2 = (L, \rho_1:L_1 \to L, \rho_2 : L_2 \to L)$, when defined, where
 $L$ is an institution and $\rho_1$ and
@@ -6243,17 +6249,17 @@ Further,  for each institution, it is required that there exist union and differ
 
 \medskip
 
-\DOL follows a model-theoretic approach on semantics: the semantics of OMS will be defined as a class of models 
+\DOL follows a model-theoretic approach on semantics: the semantics of OMS will be defined as a class of realisations
 over some signature of an institution. This is called \emph{model-level}  semantics. In some cases, but not in all, one can also define
 a \emph{theory-level} semantics of an OMS as a set of sentences over some signature of an institution. The two semantics are 
 related by the fact that, when both the model-level and the theory-level semantics of an OMS are defined, they are compatible in the 
-sense that the class of models given by the model-level semantics is exactly the model class of the theory given by the
+sense that the class of realisations given by the model-level semantics is exactly the class of realisations of the theory given by the
 theory-level semantics. 
 
  The following unifying notation is used for the two semantics of an OMS $O$:\begin{itemize}
  \item the institution of $O$ is denoted $\Inst(O)$,
   \item the signature of $O$ is denoted $\Sig(O)$ (which is a signature in $\Inst(O)$),
-  \item the class of models of $O$ is denoted $\Mod(O)$ (which is a class of models over $\Sig(O)$),
+  \item the class of models of $O$ is denoted $\Mod(O)$ (which is a class of realisations over $\Sig(O)$),
   \item the set of axioms of $O$ is denoted $\Th(O)$ (which is a set of sentences over $\Sig(O)$).
 \end{itemize}
 \noindent Moreover, the semantics of $O$ is the tuple $sem(O) = (I, \Sigma, \cM,\Delta)$
@@ -6268,7 +6274,7 @@ The semantics of OMS mappings can be captured uniformly as a graph whose nodes $
  \item $\Name(N)$, the name of the node
  \item $\Inst(N)$, the institution of the node
  \item $\Sig(N)$, the signature of the node
- \item $\Mod(N)$, the class of $\Sig(N)$-models of the node
+ \item $\Mod(N)$, the class of $\Sig(N)$-realisations of the node
  \item $\Th(N)$, the set of $\Sig(N)$-sentences of the node
 \end{itemize}
 and 
@@ -6284,7 +6290,7 @@ an edge from the node $S$ to the node $T$ is labeled with a pair
 $(\rho, \sigma)$ where $\rho=(\Phi,\alpha,\beta):\Inst(S)\to\Inst(T)$ is an institution comorphism and
 $\sigma:\Phi(\Sig(S))\to\Sig(T)$ is a signature morphism in $\Inst(T)$).
 The theory of a node  may be undefined, as in the case of OMS, and when it is defined, 
-the class of models of that node is the class of models of $\Th(N)$. 
+the class of realisationss of that node is the class of models of $\Th(N)$. 
 For brevity,  the label of a node may be written as a tuple. Further, it is required that  any OMS can be assigned a unique name. 
 
 The semantics of a network of OMS is a graph
@@ -6612,26 +6618,26 @@ $$sem(\Gamma, n) = \Gamma'$$
 \noindent where $\Gamma' = \Gamma[n.\syntax{networkName} \mapsto sem(\Gamma, n.\syntax{network})]$.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{model-conservative}, the semantics is only
-defined if the class of families of models compatible with the graph $sem(\Gamma,n.\syntax{network})$ is not empty.
+defined if the class of families of realisations compatible with the graph $sem(\Gamma,n.\syntax{network})$ is not empty.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{consequence-conservative}, the semantics is 
  defined only if all signature-free sentences that follow from the network, see entailment of OMS by networks, are tautologies.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{monomorphic}, the semantics is only
-defined if the class of families of models compatible with the graph 
+defined if the class of families of realisations compatible with the graph 
 $sem(\Gamma,n.\syntax{network})$ consist of exactly one isomorphism
-class of families of models.
+class of families of realisations.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{weak-definitional}, the semantics is only
-defined if the class of families of models compatible with the graph 
+defined if the class of families of realisations compatible with the graph 
 $sem(\Gamma,n.\syntax{network})$ is at most a singleton.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{definitional}, the semantics is only
-defined if the class of families of models compatible with the graph 
+defined if the class of families of realisations compatible with the graph 
 $sem(\Gamma,n.\syntax{network})$ is a singleton.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{not-model-conservative}, the semantics is only
-defined if the class of families of models compatible with the graph $sem(\Gamma,n.\syntax{network})$ is the empty set.
+defined if the class of families of realisations compatible with the graph $sem(\Gamma,n.\syntax{network})$ is the empty set.
 
 If $n.$\syntax{ConservativityStrength} is \syntax{not-consequence-conservative}, the semantics is 
  defined only if not all signature-free sentences that follow from the network, see entailment of OMS by networks, are tautologies.
@@ -6889,7 +6895,7 @@ $$sem(\Gamma, O) = (\Gamma',(\cI,\Sigma,\cM, \Delta))$$
         \{ M \in  \Mod(O') \mid  M \text{ is minimal in } \Mod(O')\}$ 
         and ``minimal''
 is interpreted in the pre-order defined by $M_1\leq M_2$
-if there is a model homomorphism $\M_1\to\M_2$.
+if there is a homomorphism of realisations $\M_1\to\M_2$.
  \item $\Delta = \bot$ 
  \item $\Gamma'$ is obtained from $\Gamma''=Env(\Gamma, O')$ by adding to $\Gamma''.imports$ a new
 node labeled with $(Name(O), \Inst(O),\allowbreak \Sig(O), \allowbreak \Mod(O), \Th(O))$ and
@@ -6899,7 +6905,7 @@ morphism on $\Sig(O')$.
  
 The semantics of $O$
 is defined similarly for the other three alternatives of $O.\syntax{closureType}$, 
-only the model class differs:
+only the class of realisations differs:
 \begin{itemize}
 \item if $O.\syntax{closureType} = \syntax{maximize}$,
 $\cM = 
@@ -6911,7 +6917,7 @@ $\cM =
 $\cM = 
         \{ M \in  \Mod(O') \mid  M \text{ is terminal in } \Mod(O')\}$
 \end{itemize}
-Here, initial and terminal models are defined as in
+Here, initial and terminal realisations are defined as in
 category theory, see \ref{sec:colimits}. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6927,8 +6933,8 @@ category theory, see \ref{sec:colimits}.
 
 The semantics for \syntax{ClosableOMS} has been defined above.
 
-The semantics for minimization selects the models that are minimal
-in the class of all models with the same interpretation for the
+The semantics for minimization selects the realisations that are minimal
+in the class of all realisations with the same interpretation for the
 local environment (= fixed non-logical symbols, in the terminology of circumscription).
 
 Formally, if $O$ is a \syntax{RelativeClosureOMS},
@@ -6944,7 +6950,7 @@ $$sem(\Gamma, (\cI, \Sigma, \cM, \Delta), O)) = (\Gamma'',(\cI'',\Sigma'',\cM'',
  \item $\cM'' = 
         \{ M \in  \cM \mid  M \text{ is minimal in } \{M' \in \cM \mid M'\forget\Sigma = M\forget\Sigma\}\}$ and ``minimal''
 is interpreted in the pre-order defined by $M_1\leq M_2$
-if there is a model homomorphism $\M_1\to\M_2$
+if there is a homomorphism of realisations $\M_1\to\M_2$
  \item $\Delta'' = \bot$ 
  \item $\Gamma''$ is obtained from $\Gamma'$ by adding to $\Gamma'.imports$ a new
 node labeled with $(Name(O), \Inst(O),\allowbreak \Sig(O), \Mod(O), \Th(O))$ and
@@ -7070,7 +7076,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI,\Sigma,\cM,\Delta))$$
   \item $\cI = \Inst(O.\syntax{oms})$
   \item $\Sigma = \Sigma'$,
   \item $\Delta = \Delta'$
-  \item $\cM$ is the class of $\Delta$-models
+  \item $\cM$ is the class of $\Delta$-realisations
   \item $\Gamma''$ is obtained from 
        $\Gamma' = Env(\Gamma, O.\syntax{oms})$
        by extending $\Gamma'.imports$
@@ -7095,7 +7101,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI'',\Sigma',\cM,\Delta))$$
   \item $\Sigma' = \Phi(\Sigma)$
   \item $\Delta = \alpha^{-1}_{\Sig(O.\syntax{oms})}(\Th(O.\syntax{oms})^\bullet)\cap\Sen^{\cI'}(\Sig(O.\syntax{oms}))$.
 , i.e.\ that part of $\Th(O.\syntax{oms})$ that can be expressed in the smaller signature and logic . In  practice, one looks for a finite subset that still is logically equivalent to this set.
-  \item $\cM$ is the class of $\Delta$-models
+  \item $\cM$ is the class of $\Delta$-realisations
   \item $\Gamma''$ is obtained from 
        $\Gamma' = Env(\Gamma, O.\syntax{oms})$
        by extending $\Gamma'.imports$
@@ -7121,7 +7127,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI'',\Sigma'',\cM'',\Delta''))$$
   \item $\Sigma''$ is the smallest signature
 with $\Sigma'\subseteq\Sigma''$ and $\Delta'\subseteq\Sen(\Sigma'')$. ({If this smallest signature does not exist, the semantics is undefined.})
   \item $\Delta'' = (\Delta\cap\Sen(\Sigma''))\cup\Delta'$
-  \item $\Mod(O)$ is the class of all $\Delta$-models.
+  \item $\Mod(O)$ is the class of all $\Delta$-realisations
   \item $\Gamma''$ is obtained from 
        $\Gamma'$
        by extending $\Gamma'.imports$
@@ -7139,7 +7145,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI'',\Sigma'',\cM'',\Delta''))$$
   \item $\\cI'' = \cI'$
   \item $\Sigma'' = \Sigma\setminus \Sigma'$ 
   \item $\Delta'' = \Delta\cap\Sen(\Sigma'')\setminus\Delta'$
-  \item $\cM''$ is the class of all $\Th(O)$-models.
+  \item $\cM''$ is the class of all $\Th(O)$-realisations
     \item $\Gamma''$ is obtained from 
        $\Gamma'$
        by extending $\Gamma'.imports$
@@ -7624,8 +7630,8 @@ $$sem(\Gamma,(\cI,\Sigma,\cM,\Delta),e)=
 where $(\Gamma',(\cI,\Sigma',\cM',\Delta')) = sem(\Gamma,(\Sigma,\cM),e.\syntax{extendingOMS})$.
 
 If $e.\syntax{conservativityStrength}$ is \syntax{model-conservative} or
-\syntax{implied}, the semantics is only defined if each model in
-$\cM$ is the $\Sigma$-reduct of some model in $\cM'$. 
+\syntax{implied}, the semantics is only defined if each realisation in
+$\cM$ is the $\Sigma$-reduct of some realisation in $\cM'$. 
 In case that $e.\syntax{conservativityStrength}$ is \syntax{implied},
 it is furthermore required that $\Sigma=\Sigma'$. 
 If $e.\syntax{conservativityStrength}$ is \syntax{consequence\-conservative}, the semantics is only defined if for each
@@ -7636,8 +7642,8 @@ $\Sigma$-sentence $\varphi$, $\cM'\models\varphi$ implies $\cM\models\varphi$.
 %in $\cM'$ that is unique up to isomorphism.  
 If
 $e.\syntax{conservativityStrength}$ is \syntax{definitional}, the semantics is only
-defined if each model in $\cM$ is the $\Sigma$-reduct of a unique
-model in $\cM'$.
+defined if each realisation in $\cM$ is the $\Sigma$-reduct of a unique
+realisation in $\cM'$.
 
 If $e.\syntax{extensionName}$ is present, the inclusion link is labeled with this name.
 
@@ -7705,7 +7711,7 @@ If $O.\syntax{conservativityStrength}$ is \syntax{consequence-conservative}, the
 defined if $\Delta$ has only tautologies\footnote{A tautology is a sentence holding in every model.} as signature-free\footnote{A signature-free sentence is one over the empty signature.} logical consequences.\\
 If $O.\syntax{conservativityStrength}$ is \syntax{monomorphic}, the semantics is only
 defined if $\cM$ consist of exactly one isomorphism
-class of models.\\
+class of realisations.\\
 If $O.\syntax{conservativityStrength}$ is \syntax{weak-definitional}, the semantics is only
 defined if $\cM$ is empty or a singleton.\\
 If $O.\syntax{conservativityStrength}$ is \syntax{definitional}, the semantics is only
@@ -7950,14 +7956,14 @@ The semantics is only defined if $\beta_{\Sig(L_1)}(M_2\forget\sigma) \in \Mod(L
 If the optional argument $d.\syntax{conservativityStrength}$ is
 \begin{itemize}
 \item \syntax{model-conservative}, for
-each model  $M_1\in |\Mod(L_1)|$ there must exist a model $M_2\in|\Mod(L_2)|$ such that
+each realisation  $M_1\in |\Mod(L_1)|$ there must exist a realisation $M_2\in|\Mod(L_2)|$ such that
 $\beta_{\Sig(L_1)}(M_2\forget\sigma) = M_1$. 
 \item \syntax{consequence-conservative}, 
 for each $\Sig(L_1)$-sentence $\varphi$, if $\cM_2\models \sigma(\alpha_{\Sig(L_1)}(\varphi))$ then
 $\cM_1\models \varphi$.
 \item \syntax{not-model-conservative}, 
-there must exist a model  $M_1\in|\Mod(L_1)|$ such that there is no 
-model $M_2\in|\Mod(L_2)|$ such that
+there must exist a realisation  $M_1\in|\Mod(L_1)|$ such that there is no 
+realisation $M_2\in|\Mod(L_2)|$ such that
 $\beta_{\Sig(L_1)}(M_2\forget\sigma) = M_1$.
 \item \syntax{not-consequence-conservative}, 
 there is a $\Sig(L_1)$-sentence $\varphi$, such that $\cM_2\models \sigma(\alpha_{\Sig(L_1)}(\varphi))$ and
@@ -8047,10 +8053,10 @@ such that $\beta_{\Sigma_1}(M_2\forget{\sigma^M_{N_1}}) \in \cM_1$ for each $M_2
 \end{enumerate}
 
 
-A refinement model is a class $\cM$ 
-of pairs of families of models compatible with the two networks. 
-Given a network morphism $\sigma:G_1\to G_2$ and a $G_2$ model $F$, 
- $F\forget\sigma$ is defined as the family of models 
+A refinement realisation is a class $\cM$ 
+of pairs of families of realisations compatible with the two networks. 
+Given a network morphism $\sigma:G_1\to G_2$ and a $G_2$-realisation $F$, 
+ $F\forget\sigma$ is defined as the family of realisations 
 $\{M_i\}_{i\in Nodes(G_1)}$ such that
 $M_i = F_{\sigma^G(i)}\forget{\sigma^M_{i}}$ for each $i\in Nodes(G_1)$.
 
@@ -8058,7 +8064,7 @@ Thus, the semantics of a \syntax{Refinement} consists of
 \begin{itemize}
  \item a refinement signature $(G_1,G_2)$,
  \item a network morphism $\sigma$ and
- \item a refinement model $\cM$.
+ \item a refinement realisation $\cM$.
 \end{itemize}
 \medskip
 
@@ -8131,7 +8137,8 @@ where\\
  $sem(\Gamma, \Sigma_1, \Sigma_2, r.\syntax{omsRefinementMap}) = (\rho = (\Phi,\alpha,\beta):\cI_1\to\cI_2,\sigma:\Phi(\Sigma_1)\to\Sigma_2)$,\\
  $\sigma'$ maps the node $n$ of $G_1$ to the node of $G_3$ and 
  $(\sigma')^M_n = (\sigma_1)^M_n;(\rho;\sigma);(\sigma_2)^M_{\sigma_1^G(n)}$,\\
- and $\cM = \{ (M_1, M_3)\mid \exists M_2 such that (M_2,M_3) \in \cM_2 and
+ and $\cM = \{ (M_1, M_3)\mid \exists M_2 \text{ such that }
+  (M_2,M_3) \in \cM_2 \text{ and }
   (M_1,M_2\forget{(\rho,\sigma)}) \in \cM_1 \}$.\\
  The refinement is correct only if
  for each $(M,N)\in\cM_2$, 
@@ -8366,10 +8373,10 @@ $sem(\Gamma, t.\syntax{conclusion}) = G_2$,
 such that $Shape(G_1) = Shape(G_2)$ and, for each node $i\in |Shape(G_1)|$,
 its names in the networks $G_1$ and $G_2$ are the same,
 its signatures are the same
-and the class of models obtained by projecting each family of models
+and the class of realisations obtained by projecting each family of realisations
 compatible with $G_1$ to the component $i$
 is included in the
-class of models obtained by projecting each family of models
+class of realisations obtained by projecting each family of realisations
 compatible with $G_2$ to the component $i$.
 Then $G$ extends the union of $G_1$ and $G_2$ for each 
 pair of nodes $(i_1, i_2)$,
@@ -8438,7 +8445,8 @@ such that
 \item 
 $\cI = \Inst(O_1) = \Inst(O_2)$ and 
 \item
-for each $i = 1,2$ and each model $M_i \in \Mod(O_i)$ there exists a unique model $M\in \cM$
+for each $i = 1,2$ and each realisation $M_i \in \Mod(O_i)$ 
+there exists a unique realisation $M\in \cM$
 such that $M\forget{\Sig(O_i)} = M_i$. 
 \end{enumerate}
 %
@@ -8465,8 +8473,9 @@ $sem(\Gamma, n_1) = G_1$,
 $sem(\Gamma, n_2) = G_2$,
 $sem(\Gamma, n_3) = G_3$
 such that $G_1$ and $G_2$ are subgraphs of $G_3$
-and for each $i = 1,2$ and each family of models $\cM_i$ compatible with 
-$G_i$ there is a unique family of models $\cM$ compatible with $G_3$ such that
+and for each $i = 1,2$ and each family of realisations $\cM_i$ compatible with 
+$G_i$ there is a unique family of realisations 
+$\cM$ compatible with $G_3$ such that
 the projection of $\cM$ to the nodes in $G_i$ is $\cM_i$.
 
 
@@ -8498,7 +8507,7 @@ $N_2$ with
  $(O_2, \Inst(O_2),\Sig(O_2),  \Mod(O_2), \Th(O_2))$, 
 and $\iota$ is an inclusion, 
 when $\Sigma \subseteq \Sig(O_2) \subseteq \Sig(O_1)$
-and if $c= \syntax{model-conservative}$ and for each $M\in\Mod(O_2)$ there is a model $M'\in \Mod(O_1)$ such that
+and if $c= \syntax{model-conservative}$ and for each $M\in\Mod(O_2)$ there is a realisation $M'\in \Mod(O_1)$ such that
 $M'\forget{\Sigma} = M\forget{\Sigma}$,
 or if $c=\syntax{consequence-conservative}$ and for each $\varphi\in\Sen(\Sigma)$, $O_1\models\varphi$
 implies $O_2\models\varphi$.
@@ -8709,10 +8718,10 @@ $$sem(\Gamma, L_1, L_2, s) = (rel(L_1), rel(L_2))$$
                                                                                                                   \end{cases}$$
                                                                                                                   \noindent
 $relativize_{\cI_1}(\Sigma_1,\Delta_1) = (\Sigma'_1,\Delta'_1)$,
-$\cM'_1$ is the class of $\Delta'_1$-models,
+$\cM'_1$ is the class of $\Delta'_1$-realisations,
 $name_1 = 'relativized' ++ aName$,\\
 $relativize_{\cI_2}(\Sigma_2,\Delta_2) = (\Sigma'_2,\Delta'_2)$,
-$\cM'_2$ is the class of $\Delta'_2$-models and
+$\cM'_2$ is the class of $\Delta'_2$-realisations and
 $name_2 = 'relativized'++aName'$.
                                                                                                                    
 %\sclause{Translational semantics of \DOL language constructs}
