--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1559,7 +1559,7 @@ abstract representation of a domain or of a system, in
   the sense of model-driven engineering (MDE)}
 \begin{note}
 Not to be confused with the term \termref{model} in the sense
-of logic (model theory).
+of logic (model theory). In this document, we use the term \termref{realisation} for models in the sense of model theory in logic.
 \end{note}
 
 \termdefinition{specification}{logical theory that is used to express formal
@@ -1597,7 +1597,7 @@ systems}
 
 
   \termdefinitionLight{\termref{non-logical symbol}\synonym OMS symbol\index{OMS symbol|see {OMS symbol}
- }}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}.}
+ }}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{realisation}.}
   \begin{note}
   This differs from the notion of ``atomic sentence'': such sentences
   may involve several non-logical symbols.
@@ -1641,18 +1641,13 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
    \end{note}
 
 
-\termdefinition{model}{semantic interpretation of all non-logical symbols\index{non-logical symbol} of a \termref{signature}.}
+\termdefinition{realisation}{semantic interpretation of all non-logical symbols\index{non-logical symbol} of a \termref{signature}.}
   \begin{note}
-    A model of an OMS is a model of the signature of the OMS
+    A realisation of an OMS is a realisation of the signature of the OMS
     that also satisfies all the  additional constraints expressed by the OMS. In case of \termref{flattenable} OMS, these constraints are expressed by the axioms of the OMS.
   \end{note}
   \begin{note}
-  This term refers to \emph{model} in the sense of model theory (a
-  branch of logic). It is not to be confused with \termref{MDE model} in the
-  sense of modeling (i.e., the ``M'' in OMS).
-  \end{note}
-  \begin{note}
-  The notion of model depends on the \termref{OMS language} or \termref{logic}. 
+  The notion of realisation depends on the \termref{OMS language} or \termref{logic}. 
   \end{note}
 
 
@@ -1665,9 +1660,9 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
   \end{note}
 
   
-\termdefinition{sentence}{term that is either true or false in a given \termref{model}, i.e.\ which is assigned a truth value in this \termref{model}.}
+\termdefinition{sentence}{term that is either true or false in a given \termref{realisation}, i.e.\ which is assigned a truth value in this \termref{realisation}.}
   \begin{note}
-In a \termref{model}, on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
+In a \termref{realisation}, on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
 other hand, a sentence can have several logical statuses. For example, a sentence can be:  an
 axiom, if postulated to be true;
 a theorem, if proven from other axioms and theorems; or a conjecture, if expecting to be proven 
@@ -1688,7 +1683,7 @@ from  other axioms and theorems.
   The notion of sentence depends on the \termref{OMS language} or \termref{logic}. 
   \end{note}
 
-  \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model.}
+  \termdefinition{satisfaction relation}{relation between realisations and sentences indicating which sentences hold true in the realisation.}
   \begin{note}
   The satisfaction relation depends on the \termref{OMS language} or \termref{logic}. 
   \end{note}
@@ -1705,7 +1700,7 @@ Each logical theory can also be written a \termref{basic OMS}, and conversely ea
 \termref{sentence}, or two \termref{OMS networks}, or an OMS network and an OMS) 
 expressing that the second item (the conclusion) is logically implied by the first one (the premise).}
 \begin{note}
-Entailment expresses that each model \termref{satisfying} the  premise also 
+Entailment expresses that each realisation \termref{satisfying} the  premise also 
 satisfies the conclusion.
 \end{note}
 
@@ -1714,7 +1709,7 @@ The converse is generalization.
 \end{note}
 
 
-\termdefinition{axiom}{\termref{sentence} that is  postulated to be valid (i.e.\ true in every \termref{model}).}
+\termdefinition{axiom}{\termref{sentence} that is  postulated to be valid (i.e.\ true in every \termref{realisation}).}
 
 
   \termdefinition{theorem}{\termref{sentence} that has been proven from other axioms \index{axiom} and theorems\index{theorem} and therefore has been
@@ -1833,9 +1828,9 @@ first OMS.
 
 
 \termdefinitionLight{model-theoretic conservative extension\index{conservative extension ! model-theoretic}}{extension
-   that does not lead to a restriction of class of \termref{models} of an \termref{OMS}.}
+   that does not lead to a restriction of class of \termref{realisations} of an \termref{OMS}.}
   \begin{note}
-    An extension $O_2$ of an OMS $O_1$ is a model-theoretic conservative extension, if each model of $O_1$ can be expanded to a model of $O_2$.
+    An extension $O_2$ of an OMS $O_1$ is a model-theoretic conservative extension, if each realisation of $O_1$ can be expanded to a realisation of $O_2$.
   \end{note}
   \begin{note}
    Each model-theoretic conservative extension is also a consequence-theoretic one, but not vice versa.
@@ -1846,7 +1841,7 @@ first OMS.
 \termdefinition{monomorphic extension}{\termref{extension} whose newly introduced
    non-logical symbols\index{non-logical symbol} are interpreted in a way unique up to isomorphism.}
   \begin{note}
-An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a monomorphic extension, if each model of $O_1$ can be expanded to a model of $O_2$ that is unique up to isomorphism.
+An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a monomorphic extension, if each realisation of $O_1$ can be expanded to a realisation of $O_2$ that is unique up to isomorphism.
   \end{note}
   \begin{note}
     Each monomorphic extension is also a model-theoretic conservative extension but not vice versa.
@@ -1855,10 +1850,10 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a monomorphic extensio
   \termdefinition{definitional extension}{\termref{extension} whose newly introduced
    non-logical symbols\index{non-logical symbol} are interpreted in a unique way.}
   \begin{note}
-An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a definitional extension, if each model of $O_1$ can be uniquely expanded to a model of $O_2$.
+An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a definitional extension, if each realisation of $O_1$ can be uniquely expanded to a realisation of $O_2$.
   \end{note}
   \begin{note}
-    $O_2$ being a definitional extension of $O_1$ implies a bijective correspondence between the classes of models of $O_2$ and $O_1$.
+    $O_2$ being a definitional extension of $O_1$ implies a bijective correspondence between the classes of realisations of $O_2$ and $O_1$.
   \end{note}
   \begin{note}
     Each definitional extension is also a monomorphic extension but not vice versa.
@@ -1867,7 +1862,7 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a definitional extensi
   \termdefinition{weak definitional extension}{\termref{extension} whose newly introduced
    non-logical symbols\index{non-logical symbol} can be interpreted in at most one way.}
   \begin{note}
-An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional extension, if each model of $O_1$ can be expanded to at most one model of $O_2$.
+An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional extension, if each realisation of $O_1$ can be expanded to at most one realisation of $O_2$.
   \end{note}
   \begin{note}
     An extension is definitional if and only if it is both weakly definitional
@@ -1879,7 +1874,8 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
     A conservative extension $O_2$ of an \termref{OMS}
     $O_1$ is an implied extension, if and only if the signature of
     $O_2$ is the signature of $O_1$.  $O_2$ is an implied extension of
-    $O_1$ if and only if the model class of $O_2$ is the model class
+    $O_1$ if and only if the class of realisations of $O_2$ is the
+    class of realisations
     of $O_1$.
   \end{note}
   \begin{note}
@@ -1901,7 +1897,7 @@ However, this does not work for logics that e.g.\ do not feature a $\mathit{fals
 
 
    \termdefinition{satisfiability}{property of an \termref{OMS} expressing
-that it is \termref{satisfied} by least one \termref{model}.}
+that it is \termref{satisfied} by least one \termref{realisation}.}
 \begin{note}
 The opposite is unsatisfiability.
 \end{note}
@@ -1910,7 +1906,7 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 \termref{logics} where the converse does not hold.
 \end{note}
 
-\termdefinition{model finding}{process that finds \termref{models} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
+\termdefinition{model finding}{process that finds \termref{realisationss} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
 
   \termdefinition{model finder}{\termref{tool} that implements \termref{model finding}.}
 
@@ -1967,7 +1963,7 @@ If a symbol is removed, all axioms containing that symbol are removed, too.
 \termdefinition{closed world assumption}{assumption that facts whose status is unknown are true.}
 
 \termdefinitionLight{\termref{closure}\synonym circumscription\index{circumscription|see {closure}}}
-{structured OMS expressing a variant of the \termref{closed world assumption} by restricting the \termref{models}\index{model} to those that are minimal, maximal, free or cofree (with respect to the local environment).}
+{structured OMS expressing a variant of the \termref{closed world assumption} by restricting the \termref{realisations}\index{model} to those that are minimal, maximal, free or cofree (with respect to the local environment).}
   \begin{note}
     \termref{Symbols} from the \termref{local environment} are assumed
     to have a fixed interpretation. Only the symbols newly declared in
@@ -1984,13 +1980,13 @@ If a symbol is removed, all axioms containing that symbol are removed, too.
   \end{note}
 
 
-\termdefinitionLight{\termref{minimization}} {form of closure that restricts the models to those that are minimal (with respect to the local environment).}
-\termdefinitionLight{\termref{maximization}} {form of closure that restricts the models to those that are maximal (with respect to the local environment).}
+\termdefinitionLight{\termref{minimization}} {form of closure that restricts the realisations to those that are minimal (with respect to the local environment).}
+\termdefinitionLight{\termref{maximization}} {form of closure that restricts the realisations to those that are maximal (with respect to the local environment).}
 
 
 
 
-\termdefinition{freeness}{special type of closure, restriction of \termref{models} to those that are free (with respect to the local environment).}
+\termdefinition{freeness}{special type of closure, restriction of \termref{realisations} to those that are free (with respect to the local environment).}
   \begin{note}
     In first-order logic (and similar logics), freeness means minimal interpretation
     of predicates and minimal equality among data values. Freeness can
@@ -2000,7 +1996,7 @@ If a symbol is removed, all axioms containing that symbol are removed, too.
   \end{note}
   
   
-\termdefinition{cofreeness}{special type of closure, restriction of \termref{models} to those that are cofree (with respect to the local environment).}
+\termdefinition{cofreeness}{special type of closure, restriction of \termref{realisations} to those that are cofree (with respect to the local environment).}
   \begin{note}
     In first-order logic (and similar logics), cofreeness means maximal
     interpretation of predicates and equality being observable
@@ -2273,9 +2269,9 @@ that targets specific applications or reasoning methods.}
 
 \begin{definitions}
   \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}  (user defined vocabularies), 
-models \index{model}  (interpretations of these),
-sentences\index{sentence}  (constraints on models),
- and a \termref{satisfaction relation} between models and sentences\index{sentence}.}
+realisations \index{model}  (interpretations of these),
+sentences\index{sentence}  (constraints on realisations),
+ and a \termref{satisfaction relation} between realisations and sentences\index{sentence}.}
   \begin{note}
     Most OMS languages have an underlying logic.
   \end{note}
@@ -2302,7 +2298,7 @@ the language has exactly the expressivity of the logic.}
 
  \termdefinition{institution}{metaframework mathematically formalizing
 the notion of a \termref{logic} in terms of notions of
-\termref{signature}, \termref{model}, \termref{sentence}
+\termref{signature}, \termref{realisation}, \termref{sentence}
 and \termref{satisfaction}.}
  \begin{note}
 In order to support a broad range of 
@@ -2314,7 +2310,7 @@ Institutions provide a formal framework that enables this abstraction.
  \begin{note}
 The notion of institution uses \termref{category} theory for
 providing formal interfaces for the notions of
-\termref{signature}, \termref{model}, \termref{sentence}
+\termref{signature}, \termref{realisation}, \termref{sentence}
 and \termref{satisfaction}.
 \end{note} 
 
@@ -2332,12 +2328,12 @@ and \termref{satisfaction}.
 
   \termdefinition{logic translation}{\termref{translation} of a source
     \termref{logic} into a target \termref{logic} (mapping
-    signatures\index{signature}, sentences\index{sentence} and models\index{model})
+    signatures\index{signature}, sentences\index{sentence} and realisations\index{model})
     that keeps or encodes the logical content of \termref{OMS}.}
 
   \termdefinition{logic reduction}{\termref{reduction} of a source \termref{logic}
     onto a (usually less expressive) target \termref{logic} (mapping
-	signatures\index{signature}, sentences\index{sentence} and models\index{model})
+	signatures\index{signature}, sentences\index{sentence} and realisations\index{model})
     that forgets those parts of the logical structure not
     fitting the target \termref{logic}.}
 
@@ -2388,9 +2384,9 @@ See section~\ref{dist-het-onto}.
 \termdefinition{faithful mapping}{\termref{logic mapping} that
   preserves and reflects \termref{logical consequence}.}
 
-\termdefinition{model-expansive mapping}{\termref{logic mapping} that has a surjective model translation (ensuring faithfulness of the mapping).}
+\termdefinition{model-expansive mapping}{\termref{logic mapping} that has a surjective translation of realisations (ensuring faithfulness of the mapping).}
 
-\termdefinition{model-bijective mapping}{\termref{logic mapping} that has a bijective mapping of models.}
+\termdefinition{model-bijective mapping}{\termref{logic mapping} that has a bijective mapping of realisations.}
 
 \termdefinition{exact mapping}{\termref{logic mapping} that is
   compatible with certain \DOL structuring constructs, e.g.\ \termref{union},
@@ -2401,14 +2397,14 @@ See section~\ref{dist-het-onto}.
 
 \termdefinition{embedding}{\termref{logic mapping} that embeds the
   source into the target logic, using components that are embeddings
-  and (in the case of model translations) isomorphism.}
+  and (in the case of translations of realisations) isomorphism.}
 
 \termdefinition{sublogic}{\termref{logic embedding} that is ``syntactic'' in the sense that \termref{signature} and \termref{sentence} translations are inclusions.}
 
 \termdefinition{adjointness}{relation between a \termref{logic
     translation} and a \termref{logic reduction}, expressing that
-  they share their \termref{sentence} and \termref{model}
-  translations, while the signature translations are adjoint to each
+  they share their \termref{sentence} and 
+  translations of \termref{realisations}, while the signature translations are adjoint to each
   other (in the sense of \termref{category} theory).}
 
 
