--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4109,7 +4109,7 @@ The main idea is to collect the non-logical
 symbols of the language in signatures and to assign to each signature the set of sentences that can be formed with its symbols. 
 For each signature, \DOL provides means for extracting the symbols it consists of, together with their kind.
 Institutions also provide a model theory, which introduces semantics for
-the language and gives a satisfaction relation between the models and
+the language and gives a satisfaction relation between the realisations and
 the sentences of a signature.   
 % The only restriction imposed is the
 % satisfaction condition, which captures the idea that truth is
