--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4504,16 +4504,16 @@ extended.
 
 An OMS definition \syntax{OMSDefinition} names an OMS.  It can be
 optionally marked as inconsistent, consistent, monomorphic or having a
-unique model using \syntax{ConservativityStrength}. More precisely,
+unique realisation using \syntax{ConservativityStrength}. More precisely,
 \syntax{'consequence-conservative'} here requires the OMS to have only
 tautologies as signature-free logical consequences, while
 \syntax{'not\-consequence-conservative'} expresses that this is not
 the case.  \syntax{'model-conservative'} requires satisfiability of
 the OMS, \syntax{'not-model-conservative'} its unsatisfiability.
 \syntax{'de\-fi\-nitional'} expresses that the OMS has a unique
-model (see Appendix~\ref{ex:definedconcepts} for an example); this may be interesting for characterizing OMS
+realisation (see Appendix~\ref{ex:definedconcepts} for an example); this may be interesting for characterizing OMS
 (e.g.\ returned by model finders) that are used to describe single
-models.
+realisations.
 
 
 
@@ -4586,7 +4586,8 @@ Furthermore, OMS can be constructed using
   the current OMS);
 \item a \syntax{Reduction} of an OMS to a smaller signature and/or
   less expressive logic (that is, some non-logical symbols and/or some
-  parts of the model structure are hidden, but the semantic effect of
+  parts of the structure of the realisation are hidden, 
+  but the semantic effect of
   sentences involving these is kept). The former is done using a
   \syntax{SymbolList}, which is a list of non-logical symbols that are
   to be hidden. The latter uses an \syntax{OMSLanguageTranslation}
@@ -4832,14 +4833,14 @@ at the end of clause~\ref{spec-2}.
 The DOL metamodel for entailments and equivalences is shown in 
 Fig.~\ref{fig:entailment&equivalence}.
 An entailment is a variant of an interpretation where all symbols are
-mapped identically, while an equivalence states that the model classes
+mapped identically, while an equivalence states that the classes of realisations
 of two OMS are in bijective correspondence. As for refinements,
 entailments and equivalences are also possible between networks
 (\syntax{NetworkNetworkEntailment} and \syntax{NetworkEquivalence}).
 An entailment between a network as premise and an OMS as conclusion
-(\syntax{NetworkOMSEntailment}) specifies that all models of the
+(\syntax{NetworkOMSEntailment}) specifies that all realisations of the
 network, when restricted to a given node (given by an IRI), are
-models of the OMS.
+realisations of the OMS.
 
 \begin{figure}
   \centering
