--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9197,7 +9197,7 @@ Signatures of the description logic $\ALC$ consist of a set  ${\mathcal A}$ of
 atomic concepts, a set ${\mathcal R}$ of roles and a set ${\mathcal
 I}$ of individual constants. Signature morphisms are tuples of
 functions, one for each signature component.
-Models are  first-order structures $I = (\Delta^I, .^I)$ with universe $\Delta^I$
+Realisations are  first-order structures $I = (\Delta^I, .^I)$ with universe $\Delta^I$
 that interpret concepts as unary and roles as binary predicates
 (using $.^I$). $I_1\leq I_2$ if $\Delta^{I_1}=\Delta^{I_2}$ and all
 concepts and roles of $I_1$ are subconcepts and subroles of those in $I_2$.
@@ -9359,9 +9359,9 @@ on $N_{DT} \cup \{ \textit{rdfs:Literal} \}$,
 \end{itemize}
 \item The sentences for a signature are definded as in
 the direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}. Sentence translation is substitution of symbols.
-\item  $(D,V)$-models are interpretations for $D$ and $V$. 
-$(D,V)$-model morphisms are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. Model reducts are built by first translating along the signature morphism and then
-looking up the interpretation in the model to be reduced.  
+\item  $(D,V)$-realisations are interpretations for $D$ and $V$. 
+Morphisms of $(D,V)$-models are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. Reducts of realisations are built by first translating along the signature morphism and then
+looking up the interpretation in the realisation to be reduced.  
 \item The satisfaction relation is defined as in direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}.
 \end{itemize}
 \qed\end{definition}
@@ -9412,12 +9412,12 @@ Given an \OWL theory $T = ((C,R,I), \Delta)$,
 we define $\beta: Mod^\OWL(\tilde{T}) \to Mod^\OWL(T)$ as follows: 
 if $M'\in Mod^\OWL(\tilde{T})$, then $M=\beta(M')$ has as universe
 $\Delta^M$ the set $(\top_T)^{M'}$ and each concept, role and individual are
-interpreted in $M$ in the same way as in $M'$. Since $M'$ is a $\Delta'$-model,
-we get that $M$ is indeed a $(C,R,I)$-model and moreover $M\models \Delta$.
+interpreted in $M$ in the same way as in $M'$. Since $M'$ is a $\Delta'$-realisation,
+we get that $M$ is indeed a $(C,R,I)$-realisation and moreover $M\models \Delta$.
 \end{definition}
 
 \begin{note}
-If $T = ((C,R,I),\Delta)$ is an \OWL theory, $M'$ is a $\tilde{T}$-model and
+If $T = ((C,R,I),\Delta)$ is an \OWL theory, $M'$ is a $\tilde{T}$-realisation and
 $e$ is a $(C,R,I)$-sentence, we have that $M'\models \alpha(e)$ if and only if
 $\beta(M')\models e$.
 \end{note}
