--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9569,7 +9569,7 @@ set of names, with a subset called the set of discourse names, and a
 set of sequence markers. An signature morphism maps
 names and sequence markers separately, subject to the requirement
  that a name is a discourse
-name in the smaller signature if and only if it is one in the larger signature.  A $\Sigma$-model $I=(\UR,\UD,\rel,\fun,\intCL,\seq)$ consists of a set $\UR$,
+name in the smaller signature if and only if it is one in the larger signature.  A $\Sigma$-realisation $I=(\UR,\UD,\rel,\fun,\intCL,\seq)$ consists of a set $\UR$,
 the universe of reference, with a non-empty subset $\UD\subseteq \UR$,
 the universe of discourse, and four mappings:
   \begin{itemize}
@@ -9599,12 +9599,13 @@ juxtaposition interpreted by sequence concatenation.
 Note that sequences are essentially a non-first-order feature that
 can be expressed in second-order logic.
 
-Model reducts are defined in the following way: 
-Given a signature morphism $\sigma:\Sigma_1\to\Sigma_2$ and a $\Sigma_2$-model
+Reducts of realisations are defined in the following way: 
+Given a signature morphism $\sigma:\Sigma_1\to\Sigma_2$ and a $\Sigma_2$-realisation
 $I_2 =$ $(\UR,\UD,$ $\rel,\fun,\intCL,\seq)$, $I\forget{\sigma}=(\UR,\UD,\rel,\fun,\intCL\circ\sigma,\seq\circ\sigma)$. 
 
-Given two \CL models $I_1=(\UR_1,\UD_1,\rel_1,\fun_1,\intCL_1,\seq_1)$
+Given two \CL realisations $I_1=(\UR_1,\UD_1,\rel_1,\fun_1,\intCL_1,\seq_1)$
 and  $I_2=(\UR_2,\UD_2,\rel_2,\fun_2,\intCL_2,\seq_2)$, a homomorphism
+of realisations
 $h:I_1\to I_2$ is a function $h:\UR_1\to\UR_2$ such that
 \begin{itemize}
 \item $h$ restricts to $k:\UD_1\to\UD_2$,
