--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9670,7 +9670,7 @@ A \textit{signature} $\mathbf{R_s}$ in \SimpleRDF is a set of
 \textit{resource references}. For $sub, pred, obj \in \mathbf{R_s}$, a
 triple of the form $(sub, pred, obj)$ is a \textit{sentence} in \SimpleRDF,
 where $sub$, $pred$, $obj$ represent subject name, predicate name,
-object name, respectively. An $\mathbf{R_s}$-model $M =
+object name, respectively. An $\mathbf{R_s}$-realisation $M =
 \langle R_m, P_m, S_m, EXT_m \rangle$ consists of a \textit{set $R_m$
   of resources}, a set $P_m \subseteq R_m$ of predicates, a
 \textit{mapping function} $S_m:\mathbf{R_s} \rightarrow R_m$, and an
@@ -9683,7 +9683,7 @@ resources. Satisfaction is defined as follows:
 %%%%%
 %
 Both \RDF and \RDFS are built on top of \SimpleRDF by fixing a certain
-standard vocabulary both as part of each signature and in the models.\ednote{Refer to the RDF standard here.}
+standard vocabulary both as part of each signature and in the realisations.\ednote{Refer to the RDF standard here.}
 
 Actually, the standard vocabulary is given by a certain theory. In case
 of \RDF, it contains e.g.\ resources \texttt{rdf:type} and
@@ -9696,8 +9696,8 @@ of \RDF, it contains e.g.\ resources \texttt{rdf:type} and
 \ \text{.}
 \end{gather*}
 
-In the models, the standard vocabulary is interpreted with a fixed
-model.  Moreover, for each $\RDF$-model
+In the realisations, the standard vocabulary is interpreted with a fixed
+realisation.  Moreover, for each $\RDF$-realisation
 $M = \langle R_m, P_m, S_m,\allowbreak \mathit{EXT}_m\rangle$,
 if $p\in P_m$,
 then it must hold
