--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10332,10 +10332,9 @@ Here all member ends are owned by class/data types.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\ssclause{Models}\label{a:UML-CD-models}
+\ssclause{Realisations}\label{a:UML-CD-models}
 
-As stated above, models (in the sense of the term \termref{model} defined in
-clause~\ref{terms-and-defs}) of UML class models are obtained 
+As stated above, realisations of UML class models are obtained 
 via a translation to Common Logic.
 
 For a classifier net $\Sigma = ((C, {\leq_C}), P, O, A)$,
@@ -10539,10 +10538,11 @@ Then
 It is straightforward to extend $\CL$
 from signatures to signature morphisms.
 
-\medskip\noindent\textbf{Models.}
-A $\Sigma$-model of the UML class model institution is just a
-$\CL(\Sigma)$-model in Common Logic. That is, the UML class model
-institution inherits models from Common Logic. Moreover, model reducts
+\medskip\noindent\textbf{Realisations.}
+A $\Sigma$-realisation of the UML class model institution is just a
+$\CL(\Sigma)$-realisation in Common Logic. That is, the UML class model
+institution inherits realisations from Common Logic. Moreover, reducts
+of realisations
 are inherited as well, using the action of $\CL$ on signature morphisms.
 
 
@@ -10648,8 +10648,8 @@ abbreviation for the two inequations ``$x\leq y$'' and ``$y\leq x$''.
 The satisfaction relation is inherited from Common Logic, using
 a translation $\CL(\_)$ of multiplicity formulas to Common Logic.
 That is, given a UML class and object model $\Sigma$, a
-multiplicity formula $\varphi$ and a $\Sigma$-model $M$ (the
-latter amounts to a $\CL(\Sigma)$-model $M$ in Common Logic): 
+multiplicity formula $\varphi$ and a $\Sigma$-realisation $M$ (the
+latter amounts to a $\CL(\Sigma)$-realisation $M$ in Common Logic): 
 %
 \begin{equation*}
   M \models_\Sigma \varphi
