--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11087,7 +11087,7 @@ is the corresponding sublogic inclusion.
 $\SimpleRDF \rightarrow \RDF$ is an obvious inclusion, except that
 \SimpleRDF resources need to be renamed if they happen to have a predefined
 meaning in \RDF. The model translation needs to forget the fixed parts
-of \RDF models. Since this part can always reconstructed in a unique
+of \RDF realisations. Since this part can always reconstructed in a unique
 way, the result is  an isomorphic model translation. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -11109,7 +11109,7 @@ $P$ and three roles $sub$, $pred$ and $obj$ (these reify the extension
 relation), and one individual per $\SimpleRDF$ resource. A $\SimpleRDF$ triple
 $(s,p,o)$ is translated to the $\SROIQ(D)$ sentence
    $$\top \sqsubseteq \exists U. (\exists sub. \{s\} \sqcap \exists pred. \{p\} \sqcap  \exists obj. \{o\} ).$$
-  From an $\SROIQ(D)$ model ${\cal I}$, obtain a \SimpleRDF model by inheriting the universe
+  From an $\SROIQ(D)$ realisation ${\cal I}$, obtain a \SimpleRDF realisation by inheriting the universe
   and the interpretation of individuals (then turned into resources).
   The interpretation $P^{\cal I}$ of $P$ gives $P_m$, and $EXT_m$ is obtained
   by de-reifying,
@@ -11177,7 +11177,7 @@ $ \forall x,y . (\exists z_1,\ldots, z_{n-1} . R_1(x,z_1) \wedge R_2(z_1,z_2) \w
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\sssclause{Translation of models}
+\sssclause{Translation of realisations}
 
 \begin{itemize}
 	\item For $M' \in \Models^{FOL}(\Phi \Sigma)$ define $\beta_\Sigma(M') := (\Delta, \cdot^I)$
@@ -11215,7 +11215,8 @@ of predications:
 $$\alpha_\Sigma(P(t_1,\ldots,t_n)) = (P\ \alpha_\Sigma(t_1)\ \ldots\ \alpha_\Sigma(t_n))$$
 Within terms, function applications are translated similarly:
 $$\alpha_\Sigma(f(t_1,\ldots,t_n)) = (f\ \alpha_\Sigma(t_1)\ \ldots\ \alpha_\Sigma(t_n))$$
-A \Clogic.Fol model is translated to a FOL model by using the universe of
+A \Clogic.Fol realisation is translated to a FOL realisation 
+by using the universe of
 discourse as FOL universe. The interpretation of constants is
 directly given by the interpretation of the corresponding names
 in \Clogic.Fol. The interpretation of a predicate symbol $P$ is given
@@ -11237,7 +11238,7 @@ two sections.
 This translation has been described in annex~\ref{a:uml-class}. 
 Translation of signatures is detailed in section~\ref{a:UML-CD-models},
 translation of sentences in section~\ref{a:UML-CD-sat}.
-Models are translated identically.
+Realisations are translated identically.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
