--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -13360,7 +13360,7 @@ and $H$, then $\sigma;\tau = (\sigma_i;\tau_i)_{i\in\mathbb{N}}$.
 
 \begin{example}
 Given an unsorted first-order signature $F$,
-a model $M$
+a realisation $M$
 of $F$
 consists of an universe $M_U$
 together with an interpretation of each function symbol $f \in F_i$
@@ -13368,9 +13368,9 @@ as a function $M_f$
 taking $i$
 arguments in $M_U$
 with result in $M_U$.
-Given two such models $M$
+Given two such realisations $M$
 and $N$,
-a model homomorphism $m : M \to N$
+a homomorphism of realisations $m : M \to N$
 is a function $m: M_U \to N_U$
 such that for each $i\in \mathbb{N}$
 and each $f\in F_i$
@@ -13378,9 +13378,9 @@ we have that $m(M_f(x_1,\ldots, x_n)) = N_f(m(x_1), \ldots, m(x_n))$
 for every $x_1,\ldots x_n$
 in $M_U$.
 The identity function on $M_U$
-is a model homomorphism on $M$
+is a homomorphism of realisations on $M$
 and the composition is the usual composition of functions. This gives us
-the category of first-order models of $F$.
+the category of first-order realisations of $F$.
 \end{example}
 
 \begin{definition}
@@ -13498,9 +13498,10 @@ each object and each morphism to itself.
 \end{example}
 
 \begin{example}
-The forgetful functor $F$ from the category of unsorted first-order models of a 
-signature $F$ to $Set$ takes each model $M$ to the set $M_U$ and each
-model morphism $m:M\to N$ to its underlying function $m:M_U \to N_U$.
+The forgetful functor $F$ from the category of unsorted first-order 
+realisations of a 
+signature $F$ to $Set$ takes each realisation $M$ to the set $M_U$ and each
+morphism of realisations $m:M\to N$ to its underlying function $m:M_U \to N_U$.
 \end{example}
 
 \begin{example}
